Bug 145079 - hyperlink don't work anymore in version Calc 7.2.1.2 (x64)
Summary: hyperlink don't work anymore in version Calc 7.2.1.2 (x64)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2021-10-11 17:58 UTC by Paul
Modified: 2021-11-10 09:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example (5.88 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-10-11 18:00 UTC, Paul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2021-10-11 17:58:54 UTC
Description:
Since version of Calc 7.2.1.2 I have following problem with hyperlinks that link to a different sheet in the same document: when you choose “edit hyperlink”, you see that every name has “.A1” at the end and therefore the link doesn’t work anymore. Removing “.A1” does solve it, but after reboot calc "“A1” is back.
It only happens when these 2 options are combined:
- you define a cell by giving it a name
- you save it as XLX

See also https://ask.libreoffice.org/t/calc-hyperlink-changes-after-reboot/69136/13

Steps to Reproduce:
1.you define a name to a cell (menu > sheet > named range and expressions > define)
2. in same document, but other sheet you insert a hyperlink to that cell
3. save as XLSX and reboot Calc 

Actual Results:
the hyperlink doesn't work anymore because Calc added "A1" at the end. If you remove manually "A1" then it works again.

Expected Results:
before the up^date, links worked after reboot (I'm using the document for months)


Reproducible: Always


User Profile Reset: Yes



Additional Info:
it shouldn't add "A1" to each link
Comment 1 Paul 2021-10-11 18:00:39 UTC
Created attachment 175674 [details]
example
Comment 2 Julien Nabet 2021-10-11 19:11:17 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2021-10-11 19:37:58 UTC
Tünde: noticing https://opengrok.libreoffice.org/xref/core/sc/source/filter/excel/xecontent.cxx?r=ad1557f5&mo=14319&fi=441#441
and
commit 3c3b9ad8886da916027f0fb940a2df822d63d4d7
Author: Tünde Tóth <toth.tunde@nisz.hu>
Date:   Wed Jul 14 14:57:00 2021 +0200

    tdf#143220 XLSX export: fix hyperlink to sheet target
    
    Hyperlink to another sheet didn't work in Excel.

thought you might be interested in this one.
Comment 4 Commit Notification 2021-11-04 07:59:25 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/85a86ba6ba34ff0dfc92c3ce38cba86daf547121

tdf#145079 XLSX export: fix regression of internal hyperlinks

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-11-04 09:54:09 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/0d2bcb7062fe9df5dabd69f6623d21ad4f1b954f

tdf#145079 XLSX export: fix regression of internal hyperlinks

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2021-11-10 09:10:04 UTC
Verified in: 

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: a0a38b88dc3a61d212d784f41a27f97d9c2d7f32
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded