tdf#145079 XLSX export: fix internal hyperlinks

Hyperlinks with internal named range targets didn't work.

Regression from commit: 3c3b9ad8886da916027f0fb940a2df822d63d4d7
(tdf#143220 XLSX export: fix hyperlink to sheet target)

Change-Id: I8128ebb977dba7304bc9c69e45f6c55c71f800cf